# smesh

./: .gitignore  CLAUDE.md  README.md
MeshStealth/MeshStealth.xcodeproj/: project.pbxproj
MeshStealth/MeshStealth.xcodeproj/xcuserdata/spizzerp.xcuserdatad/xcschemes/: xcschememanagement.plist
MeshStealth/MeshStealth/App/: MeshStealthApp.swift
MeshStealth/MeshStealth/Resources/: Info.plist
MeshStealth/MeshStealth/Services/: PeerNicknameStore.swift
MeshStealth/MeshStealth/ViewModels/: ChatNotifications.swift  ChatViewModel.swift  MeshViewModel.swift  WalletViewModel.swift
MeshStealth/MeshStealth/Views/: ActivityView.swift  ChatView.swift  NearbyPeersView.swift  PendingPaymentsView.swift  SendPaymentView.swift  SettingsView.swift  WalletBackupView.swift  WalletView.swift
MeshStealth/MeshStealth/Views/Components/: NeuromorphicButtons.swift  NeuromorphicInputs.swift  NeuromorphicStyle.swift  NeuromorphicWalletContainer.swift  PeerDetailCard.swift  RadarView.swift  TerminalAnimations.swift  TerminalBadges.swift  TerminalButtons.swift  TerminalChatBubble.swift  TerminalInputs.swift  TerminalPeerActionPopup.swift  TerminalSettlementOverlay.swift  TerminalStyle.swift  TerminalWalletContainer.swift  TransactionLink.swift  WalletBadges.swift
MeshStealth/Programs/stealth-pq/: Anchor.toml  Cargo.toml  package-lock.json
MeshStealth/Programs/stealth-pq/programs/stealth-pq/: Cargo.toml
MeshStealth/Programs/stealth-pq/programs/stealth-pq/src/: lib.rs
MeshStealth/Programs/stealth-pq/tests/: stealth-pq.ts
(+3 files in other folders)
